# nerdwm

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO
assets/: config.toml
examples/xephyr/: README  run.sh  xinitrc
nerdwm-x11/: Cargo.toml
nerdwm-x11/src/: context.rs  event.rs  input.rs  keysym.rs  lib.rs  window.rs
res/: config.json
src/: atoms.rs  client.rs  config.rs  display_context.rs  display_manager.rs  errors.rs  event.rs  input.rs  lib.rs  macros.rs  main.rs  prelude.rs  window.rs  wm.rs
src/events/: input.rs  keyconvert.rs  keysym.rs  keysyms.rs  mod.rs
src/layout/: floating.rs  mod.rs
src/wm/: actions.rs  config.rs  desktop.rs  ewmh.rs  mod.rs
src/wm/layout/: mod.rs
src/workspace/: client.rs  mod.rs
src/workspace/layout/: mod.rs
