[package]
name = "nerdwm"
version = "0.0.1"
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A simple X11 window manager."
repository = "https://github.com/schctl/nerdwm"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]

[dependencies]
log = "0.4"
libc = "0.2"
fern = "0.6"
chrono = "0.4"

xdg = "2.2"
xcb = "0.9"
xcb-util = { version = "0.3", features = ["keysyms"] }

serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
