[package]
name = "nerdwm"
version = "0.0.1"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
chrono = "0.4"
fern = "0.6"
log = "0.4"
libc = "0.2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
xdg = "2.2"

serde = { version = "1", features = ["derive"] }
toml = "0.5"

xcb = "0.10"
xcb-util = { version = "0.4", features = ["keysyms"] }
