[package]
name = "nerdwm-x11"
version = "0.0.1"
edition = "2018"
license = "MIT"
readme = "../README.md"
description = "Minimal x11 wrapper."
repository = "https://github.com/schctl/nerdwm"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]

[dependencies]
log = "0.4"
x11-dl = "2.18.5"
serde = { version = "1.0", features = ["derive"] }
