[package]
name = "nerdwm-x11"
version = "0.0.1"
edition = "2018"
license = "MIT"
readme = "../README.md"
description = "Minimal x11 wrapper."
repository = "https://github.com/schctl/nerdwm"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]

[dependencies]
log = "0.4"
libc = "0.2"
xcb = "0.9"
xcb-util = { version = "0.3.0", features = ["keysyms"] }
serde = { version = "1.0", features = ["derive"] }
